fixed all the issues, except the collapsing margins (this is probably the final version)

--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ header {
     background: rgba(255, 255, 255, 0.6);
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.04);
     border-radius: 0;
-    overflow: auto;
 }
 
 nav {
@@ -21,7 +20,6 @@ nav {
     align-items: center;
     height: 199px;
     padding: 0 10% 0 15%;
-    overflow: auto;
 }
 
 #logo {
@@ -58,7 +56,6 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: auto;
 }
 
 .container {
@@ -68,7 +65,6 @@ section {
     grid-row-gap: 32px;
     grid-column-gap: 32px;
     margin: 80px 0 77.98px 0;
-    overflow: auto;
 }
 
 .big-item {
